// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<label
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
  htmlFor="test"
>
  <input
    checked={undefined}
    className="al am c an ao ap aq"
    disabled={undefined}
    id="test"
    name="test"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    type="checkbox"
  />
  <span
    className="al am c an ao ap aq"
  >
    Test Toggle
  </span>
  <span
    className="a al ar as at au av aw ax ay az ba bb bc bd n be o bf bg bh bi bj bk bl bm bn bo y bp z bq br bs bt bu"
  />
</label>
`;

exports[`should render 2`] = `
"
.a {
  display: block
}

.b {
  position: relative
}

.c {
  margin: 0px
}

.d {
  height: 2.26667rem
}

.e {
  width: 5.334rem
}

.f {
  border-radius: 2px
}

.g {
  border-width: 1px
}

.h {
  border-style: solid
}

.i {
  border-color: #aaa
}

.j {
  cursor: pointer
}

.k {
  font-size: 0.86667rem
}

.l {
  margin-bottom: 0.38333em
}

.m {
  min-height: 1.22em
}

.n::before {
  display: block
}

.o::before {
  position: absolute
}

.p::before {
  top: 0px
}

.q::before {
  bottom: 0px
}

.r::before {
  width: 50%
}

.s::before {
  line-height: 2.26667rem
}

.t::before {
  text-align: center
}

.u::before {
  content: 'On'
}

.v::before {
  left: 0px
}

.w::before {
  background: #9bca3e
}

.x::before {
  color: #fff
}

.y::after {
  display: block
}

.z::after {
  position: absolute
}

.ab::after {
  content: 'Off'
}

.ac::after {
  top: 0px
}

.ae::after {
  bottom: 0px
}

.af::after {
  right: 0px
}

.ag::after {
  text-align: center
}

.ah::after {
  width: 50%
}

.ai::after {
  line-height: 2.26667rem
}

.aj::after {
  background: #7c7c7c
}

.ak::after {
  color: #fff
}

.al {
  position: absolute
}

.am {
  overflow: hidden
}

.an {
  padding: 0px
}

.ao {
  border: 0px
}

.ap {
  outline: 0px
}

.aq {
  opacity: 0
}

.ar {
  z-index: 1
}

.as {
  top: 0px
}

.at {
  bottom: 0px
}

.au {
  left: 0px
}

.av {
  width: 50%
}

.aw {
  border: inherit
}

.ax {
  border-width: 0px
}

.ay {
  border-right-width: inherit
}

.az {
  border-left-width: 0px
}

.ba {
  background: #fff
}

.bb {
  transition: left 100ms ease;
  -webkit-transition: left 100ms ease;
  -moz-transition: left 100ms ease
}

.bc::before {
  border: 4px solid transparent
}

.bd::before {
  content: ''
}

.be::before {
  height: 0px
}

.bf::before {
  top: 50%
}

.bg::before {
  left: 50%
}

.bh::before {
  margin-top: -3px
}

.bi::before {
  width: 0px
}

.bj::before {
  border-left-color: transparent
}

.bk::before {
  border-right-color: inherit
}

.bl::before {
  margin-left: -10px
}

.bm::after {
  border: 4px solid transparent
}

.bn::after {
  border-left-color: inherit
}

.bo::after {
  content: ''
}

.bp::after {
  height: 0px
}

.bq::after {
  top: 50%
}

.br::after {
  left: 50%
}

.bs::after {
  margin-left: 2px
}

.bt::after {
  margin-top: -3px
}

.bu::after {
  width: 0px
}
"
`;

exports[`should render checked 1`] = `
<label
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
  htmlFor="test"
>
  <input
    checked={true}
    className="al am c an ao ap aq"
    disabled={undefined}
    id="test"
    name="test"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    type="checkbox"
  />
  <span
    className="al am c an ao ap aq"
  >
    Test Toggle
  </span>
  <span
    className="a al ar as at au av aw ax ay az ba bb bc bd n be o bf bg bh bi bj bk bl bm bn bo y bp z bq br bs bt bu"
  />
</label>
`;

exports[`should render checked 2`] = `
"
.a {
  display: block
}

.b {
  position: relative
}

.c {
  margin: 0px
}

.d {
  height: 2.26667rem
}

.e {
  width: 5.334rem
}

.f {
  border-radius: 2px
}

.g {
  border-width: 1px
}

.h {
  border-style: solid
}

.i {
  border-color: #aaa
}

.j {
  cursor: pointer
}

.k {
  font-size: 0.86667rem
}

.l {
  margin-bottom: 0.38333em
}

.m {
  min-height: 1.22em
}

.n::before {
  display: block
}

.o::before {
  position: absolute
}

.p::before {
  top: 0px
}

.q::before {
  bottom: 0px
}

.r::before {
  width: 50%
}

.s::before {
  line-height: 2.26667rem
}

.t::before {
  text-align: center
}

.u::before {
  content: 'On'
}

.v::before {
  left: 0px
}

.w::before {
  background: #9bca3e
}

.x::before {
  color: #fff
}

.y::after {
  display: block
}

.z::after {
  position: absolute
}

.ab::after {
  content: 'Off'
}

.ac::after {
  top: 0px
}

.ae::after {
  bottom: 0px
}

.af::after {
  right: 0px
}

.ag::after {
  text-align: center
}

.ah::after {
  width: 50%
}

.ai::after {
  line-height: 2.26667rem
}

.aj::after {
  background: #7c7c7c
}

.ak::after {
  color: #fff
}

.al {
  position: absolute
}

.am {
  overflow: hidden
}

.an {
  padding: 0px
}

.ao {
  border: 0px
}

.ap {
  outline: 0px
}

.aq {
  opacity: 0
}

.ar {
  z-index: 1
}

.as {
  top: 0px
}

.at {
  bottom: 0px
}

.au {
  left: 50%
}

.av {
  width: 50%
}

.aw {
  border: inherit
}

.ax {
  border-width: 0px
}

.ay {
  border-right-width: 0px
}

.az {
  border-left-width: inherit
}

.ba {
  background: #fff
}

.bb {
  transition: left 100ms ease;
  -webkit-transition: left 100ms ease;
  -moz-transition: left 100ms ease
}

.bc::before {
  border: 4px solid transparent
}

.bd::before {
  content: ''
}

.be::before {
  height: 0px
}

.bf::before {
  top: 50%
}

.bg::before {
  left: 50%
}

.bh::before {
  margin-top: -3px
}

.bi::before {
  width: 0px
}

.bj::before {
  border-left-color: transparent
}

.bk::before {
  border-right-color: inherit
}

.bl::before {
  margin-left: -10px
}

.bm::after {
  border: 4px solid transparent
}

.bn::after {
  border-left-color: inherit
}

.bo::after {
  content: ''
}

.bp::after {
  height: 0px
}

.bq::after {
  top: 50%
}

.br::after {
  left: 50%
}

.bs::after {
  margin-left: 2px
}

.bt::after {
  margin-top: -3px
}

.bu::after {
  width: 0px
}
"
`;

exports[`should render disabled 1`] = `
<label
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
  htmlFor="test"
>
  <input
    checked={true}
    className="al am c an ao ap aq"
    disabled={true}
    id="test"
    name="test"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    type="checkbox"
  />
  <span
    className="al am c an ao ap aq"
  >
    Test Toggle
  </span>
  <span
    className="a al ar as at au av aw ax ay az ba bb bc bd n be o bf bg bh bi bj bk bl bm bn bo y bp z bq br bs bt bu"
  />
</label>
`;

exports[`should render disabled 2`] = `
"
.a {
  display: block
}

.b {
  position: relative
}

.c {
  margin: 0px
}

.d {
  height: 2.26667rem
}

.e {
  width: 5.334rem
}

.f {
  border-radius: 2px
}

.g {
  border-width: 1px
}

.h {
  border-style: solid
}

.i {
  border-color: #7c7c7c
}

.j {
  cursor: not-allowed
}

.k {
  font-size: 0.86667rem
}

.l {
  margin-bottom: 0.38333em
}

.m {
  min-height: 1.22em
}

.n::before {
  display: block
}

.o::before {
  position: absolute
}

.p::before {
  top: 0px
}

.q::before {
  bottom: 0px
}

.r::before {
  width: 50%
}

.s::before {
  line-height: 2.26667rem
}

.t::before {
  text-align: center
}

.u::before {
  content: 'On'
}

.v::before {
  left: 0px
}

.w::before {
  background: #7c7c7c
}

.x::before {
  color: #dedede
}

.y::after {
  display: block
}

.z::after {
  position: absolute
}

.ab::after {
  content: 'Off'
}

.ac::after {
  top: 0px
}

.ae::after {
  bottom: 0px
}

.af::after {
  right: 0px
}

.ag::after {
  text-align: center
}

.ah::after {
  width: 50%
}

.ai::after {
  line-height: 2.26667rem
}

.aj::after {
  background: #7c7c7c
}

.ak::after {
  color: #dedede
}

.al {
  position: absolute
}

.am {
  overflow: hidden
}

.an {
  padding: 0px
}

.ao {
  border: 0px
}

.ap {
  outline: 0px
}

.aq {
  opacity: 0
}

.ar {
  z-index: 1
}

.as {
  top: 0px
}

.at {
  bottom: 0px
}

.au {
  left: 50%
}

.av {
  width: 50%
}

.aw {
  border: inherit
}

.ax {
  border-width: 0px
}

.ay {
  border-right-width: 0px
}

.az {
  border-left-width: inherit
}

.ba {
  background: #fff
}

.bb {
  transition: left 100ms ease;
  -webkit-transition: left 100ms ease;
  -moz-transition: left 100ms ease
}

.bc::before {
  border: 4px solid transparent
}

.bd::before {
  content: ''
}

.be::before {
  height: 0px
}

.bf::before {
  top: 50%
}

.bg::before {
  left: 50%
}

.bh::before {
  margin-top: -3px
}

.bi::before {
  width: 0px
}

.bj::before {
  border-left-color: transparent
}

.bk::before {
  border-right-color: inherit
}

.bl::before {
  margin-left: -10px
}

.bm::after {
  border: 4px solid transparent
}

.bn::after {
  border-left-color: inherit
}

.bo::after {
  content: ''
}

.bp::after {
  height: 0px
}

.bq::after {
  top: 50%
}

.br::after {
  left: 50%
}

.bs::after {
  margin-left: 2px
}

.bt::after {
  margin-top: -3px
}

.bu::after {
  width: 0px
}
"
`;
